# cortex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SHIP_V1.md  docker-compose.dev.yml  docker-compose.yml  plan.md  postgres_admin_cli.py  requirements-dev.txt  requirements.txt  ruff.toml
docs/: Dockerfile  docusaurus.config.ts  package-lock.json  sidebars.ts
license-server/: main.py  requirements.txt
mcp/: client.py  middleware.py  server.py
rag-backend/: poetry.toml  pyproject.toml
rag-backend/api/: server.py
rag-backend/api/routes/: documents.py  jobs.py  search.py
rag-backend/controllers/: folder_ingest.py  ingest.py  jobs.py  query.py  worker.py
rag-backend/core/: auth.py  chunker.py  config.py  database.py  dependencies.py  embedder.py  enums.py  exceptions.py  license.py  logging.py  reranker.py  text_utils.py
rag-backend/db/: schema.sql
rag-backend/models/: document.py  job.py
rag-backend/schemas/: document.py  job.py
rag-backend/services/: folder_ingest.py  ingest.py  jobs.py  query.py  worker.py
rag-backend/workers/: arq_worker.py
rag-docs/: python-async.md
rag-frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
sample-docs/: README.md  rag-patterns.md  vector-databases.md  voyager-program.md
scripts/: dev.sh  mcp-connect-claude-cli.sh  mcp-connect-claude-desktop.sh  mcp-connect-codex.sh  quickstart.sh  seed.sh
tests/: conftest.py  (+2 more)
(+44 files in other folders)
