[project]
name = "rag-backend"
version = "0.1.0"
description = "Cortex RAG Backend"
authors = [
    {name = "Jenendar",email = "jenendar@logicloop.io"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    # Web
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    # Database
    "sqlalchemy>=2.0.51",
    "greenlet>=3.0.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    # Job queue
    "arq>=0.26.1",
    "redis>=5.0.0",
    # Validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    # Document parsing
    "python-frontmatter>=1.3.0",
    # Embeddings + reranking
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "scikit-learn>=1.9.0",
    "numpy>=1.26.0,<2.5.0",
    "ollama>=0.6.2",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
